--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,49 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      android:versionCode="1"
-      android:versionName="1.0" package="ioio.examples.hello">
+    package="ioio.examples.hello"
+    android:versionCode="1"
+    android:versionName="1.0" >
+
     <uses-sdk android:minSdkVersion="3" />
-    
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.CAMERA"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera" />
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
+        android:debuggable="true"
         android:icon="@drawable/icon"
-        android:label="@string/app_name"
-        android:debuggable="true" >
-        
+        android:label="@string/app_name" >
         <activity
+            android:name="ioio.examples.hello.OpenActivity"
             android:label="@string/app_name"
-            android:name="OpenActivity"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity
-            android:name=".MainActivity"
-            android:screenOrientation="portrait"
-            android:noHistory="true" >
-        </activity>
-        <activity
-            android:name=".ShowBracActivity"
+            android:name="ioio.examples.hello.MainActivity"
+            android:noHistory="true"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name=".BracListActivity"
+            android:name="ioio.examples.hello.ShowBracActivity"
             android:screenOrientation="portrait" >
         </activity>
-        
-        <service android:name=".TimerService"></service>
+        <activity
+            android:name="ioio.examples.hello.BracListActivity"
+            android:screenOrientation="portrait" >
+        </activity>
 
+        <service android:name="ioio.examples.hello.TimerService" >
+        </service>
+
+        <activity
+            android:name="ioio.examples.hello.GameActivity"
+            android:noHistory="true"
+            android:screenOrientation="portrait" >
+        </activity>
     </application>
+
 </manifest>
